Fix: - floating cursor now is disabled on mobile - added semi-real copy to works

--- a/src/scss/03_base/_globals/_global-base.scss
+++ b/src/scss/03_base/_globals/_global-base.scss
@@ -3,5 +3,4 @@ body {
   line-height: calc(100% + 10px);
   letter-spacing: 0.18em;
   word-spacing: 0.1em;
-  @include cursor1;
 }
